--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,9 @@ flycheck_*.el
 # projectiles files
 .projectile
 
+### VisualStudioCode ###
+.vscode
+
 
 
 ### VisualStudio ###
@@ -378,7 +381,6 @@ FakesAssemblies/
 _Pvt_Extensions
 
 # Paket dependency manager
-.paket/paket.exe
 paket-files/
 
 # FAKE - F# Make
@@ -387,4 +389,3 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
-
